- CVE-2020-14344 resolved in wordpress
- CVE-2020-13902 resolved in wordpress
- CVE-2020-3350 resolved in restingclam
- CVE-2020-3481 resolved in restingclam

v1.1.1
======
- Wordpress updated to v5.5
- CVE-2019-15847 resolved in nginx-modsec and nginx-proxy

v1.1.2
======
- Removed client authentication from nginx proxy, only used internally for antivirus over VLAN
- CVE-2020-14363 resolved in wordpress
- CVE-2020-24659 resolved in wordpress
- CVE-2020-14350 resolved in drupal7 and drupal8
- CVE-2020-14349 resolved in drupal7 and drupal8
- Updated MD5 hash for composer download in drupal8
- Resolved maximum recursion depth issue in mariadb configuration
- Wordpress upgraded to 5.5.1
- PHP intl extension added to drupal7, drupal8 and wordpress

v1.1.3
======
- Rebuilds only, no code changes
- CVE-2020-8177 resolved in all Alpine based images
- CVE-2020-8169 resolved in all Alpine based images
- CVE-2020-24977 resolved in all Alpine based images
- Restingclam updated to log requesting IP address to identify to which server the virus was uploaded to
- Added script to add/renew letsencrypt certs via fleeting certbot container

v1.2.0
======
- NGINX log format brought in line with IICSA
- Modsec OWASP ruleset updated from 3.0.2 to 3.3.0
- Modsec OWASP rule exclusions enabled for Wordpress, Drupal etc.
- CVE-2020-8927 resolved in wordpress
- CVE-2020-8927 resolved in drupal7
- CVE-2020-24977 resolved in drupal8
- CVE-2020-8177 resolved in drupal8
- CVE-2020-8169 resolved in drupal8
- CVE-2020-8927 resolved in drupal8

v1.2.1 (latest)
======
- Readded include directive for /etc/mysql/conf.d for mariadb image
- Added include directive for /etc/mysql/encircle.d for overrides
- Added error-logging.ini file to drupal images to replicate wordpress settings
- Removed settings from my.cnf to be overriden in mariadb image
- Drupal8 updated from 8.9.2 to 8.9.6 resolving multiple vulnerabilities (CVE-2020-136(66/67/68/69/70))
- Added drupal.conf hardening to NGINX modsec image